# lunabotics-csu25

./: .gitignore  README.md
DOCUMENTATION/: April Tags Camera Documentation.txt  _MASTER.txt  _SCRATCHPAD.txt  pico.txt
april_tag_cam/: main.py
apriltags/: README.md  TODO.md  calibrate_camera.py  detect_distance.py  distance_detector.py  documentation.md  example.py  read_and_calibrate.py
i2c/: master.py  slave.ino
lunabotics_workspace/install/: local_setup.sh  setup.sh
lunabotics_workspace/log/: latest_build
lunabotics_workspace/src/autonomous/: package.xml  setup.py
lunabotics_workspace/src/autonomous/autonomous/: autonomous.py
lunabotics_workspace/src/crunch_tags/: package.xml  setup.cfg  setup.py
lunabotics_workspace/src/crunch_tags/crunch_tags/: crunch_tags.py
lunabotics_workspace/src/crunch_tags_msgs/: CMakeLists.txt  package.xml
lunabotics_workspace/src/crunch_tags_msgs/msg/: AprilTag.msg  AprilTags.msg
lunabotics_workspace/src/ctrl_to_motor/: setup.cfg  setup.py
lunabotics_workspace/src/image_transmission/: package.xml  setup.cfg  setup.py
lunabotics_workspace/src/lunabotics_master/: package.xml  setup.cfg  setup.py
lunabotics_workspace/src/manual_drive/: package.xml  setup.py
lunabotics_workspace/src/networking/: package.xml  setup.py
lunabotics_workspace/src/robo_driver/: package.xml  setup.py
lunabotics_workspace/src/robo_driver_msgs/: CMakeLists.txt  package.xml
pico/: README.MD  led.py  main.py  send_pico.py  test.py
test/install/: local_setup.sh  setup.sh  setup.zsh
test/log/: latest_build
(+28 files in other folders)
