<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crunch_tags</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fabiohj7@gmail.com">lunabotics</maintainer>
  <license>TODO: License declaration</license>

  <depend>usb_cam</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>crunch_tags_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
